# faceapi-demo

./: .gitignore  Dockerfile  README.md
backend/: pyproject.toml  requirements.txt
backend/faceapi/: __cli__.py  main.py
backend/faceapi/core/: __init__.py  config.py  session.py
backend/faceapi/db/: __init__.py  memory_managers.py
backend/faceapi/face_rec/: FaceRecModel.py  OnnxModel.py  __init__.py
backend/faceapi/models/: __init__.py  user.py
backend/faceapi/routes/: __init__.py  admin.py  face.py  session.py  user.py
backend/faceapi/schemas/: __init__.py  face.py  response.py  session.py  user.py
backend/faceapi/services/: __init__.py  admin.py  compatibility.py  face.py  user.py
backend/faceapi/utils/: __init__.py  face_utils.py  jwt_utils.py  pass_utils.py  session_utils.py
frontend/: .env.production  .env.template  .eslintrc.js  .gitignore  index.html  package-lock.json  pnpm-lock.yaml  vite.config.js
frontend/scripts/: download_models.js  download_models.ps1  download_models.sh
frontend/src/: App.vue  main.js
frontend/src/components/: DemoNotice.vue  FaceDetectionPopOut.vue  FaceDetectionRecognizer.vue  FaceRecongnizerPopOut.vue  SessionManager.vue  UserManager.vue
frontend/src/router/: index.js
frontend/src/styles/: global.css
frontend/src/utils/: api.js  face.js
frontend/src/views/: Admin.vue  Login.vue  Signup.vue  User.vue
